-*- coding: iso-8859-1 -*-
Mailman - The GNU Mailing List Management System
Copyright (C) 1998-2014 by the Free Software Foundation, Inc.
51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA

Here is a history of user visible changes to Mailman.

2.1.19 (xx-xxx-xxxx)

  Changed behavior

    - Mailman's log files, request.pck files and heldmsg-* files are no
      longer created world readable to protect against access by untrusted
      local users.  Note that permissions on existing log files won't be
      changed so if you are concerned about this and don't rotate logs or
      have a logrotate process that creates new log files instead of letting
      Mailman create them, you will need to address that.  (LP: #1327404)

  i18n

    - A minor change in the French translation of a listinfo subscribe form
      message has been made.  (LP: #1331194)

  Bug fixes and other patches

    - The options CGI now rejects all but HTTP GET and POST requests.
      (LP: #1372199)

    - A list's poster password will now be accepted on an Urgent: header.
      (LP: #1371678)

    - Fixed a bug which caused a setting of 2 for REMOVE_DKIM_HEADERS to be
      ignored.  (LP: #1363278)

    - Renamed messages/sr/readme.sr to README.sr.  (LP: #1360616)

    - Moved the dmarc_moderation_action checks from the Moderate handler to
      the SpamDetect handler so that the Reject and Discard actions will be
      done before the message might be held by header_filter_rules, and the
      Wrap Message and Munge From actions will be done on messages held by
      header_filter_rules if the message is approved.  (LP: #1334450)

    - <label> tags have been added around most check boxes and radio buttons
      and their text labels in the admin and admindb web GUI so they can be
      (de)selected by clicking the text.  (LP: #266391)

    - If checking DNS for dmarc_moderation_action and DNS lookup is not
      available, log it.  (LP: #1324541)
 